--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apisauce": "^0.14.1",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.3",
     "react": "^16.0.0",
